# git-playground

./: .gitleaks.toml  pixi-dependencies.json  pixi.toml  play-file.txt  pyproject.toml  ruff.toml
.github/workflows/: build.yml.disabled  code-format-check.yml  dependency-review.yml  dependency-security.yml  pixi-build.yml  secrets-detection.yml
scripts/: analyze_pixi_packages.py  format-test.py  format_test.py  pixi_to_osv.py
src/: extension.py
