[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "git-playground"
description = "Git playground project with comprehensive code quality checks"
dynamic = ["version"]
requires-python = ">=3.8"

[tool.ruff]
# Target Python 3.9 (matching your workflow)
target-version = "py39"

# Set line length to 88 (Black-compatible)
line-length = 88

# Enable specific rule sets
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF", # Ruff-specific rules
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

# Exclude files/directories from linting
exclude = [
    ".git",
    ".pixi",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
# Import sorting configuration
known-first-party = ["scripts"]
force-single-line = false
force-sort-within-sections = false

[tool.ruff.per-file-ignores]
# Ignore certain rules in specific files
"scripts/*" = ["E402"]  # Allow imports not at top of file in scripts
